# m5

./: main.py  pyproject.toml
core/: app.py
services/: fetcher.py  formatter.py
