[tool.poetry]
name = "m5"
version = "0.1.0"
description = ""
package-mode = false
authors = ["Moses-93 <moieseenko2001@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
aiohttp = "3.11.10"
asyncio = "3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
